quick z-index fix (#174)

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -12,9 +12,8 @@
   filter: drop-shadow(0 10px 15px rgba(0, 0, 0, 0.3));
   border-radius: 0  0 25px 25px;
 
-  &--teamPage {
-    z-index: 1;
-  }
+  position: relative;
+  z-index: 1;
 
   &__title {
     @include typography.title-text;
